automatically merged revision 864463: introduce some heavy hacks to avoid QWidget::scroll's performance bug on unpatched Qt.

BUG: 167739

svn path=/branches/KDE/4.1/kdelibs/; revision=864470